# openGL-learn-project

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: .gitignore  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  glad.c  main.cpp
src/res/shaders/: Basic.shader
